--- a/final_additional_task/stock_comparison.ipynb
+++ b/final_additional_task/stock_comparison.ipynb
@@ -2,15 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "042c6399-9a80-4eec-b787-a7753e092015",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 1,
    "id": "3816e8d2-642c-4704-9b8e-83a7d0ee95ce",
    "metadata": {},
    "outputs": [],
@@ -18,6 +10,7 @@
     "import pandas as pd\n",
     "import yfinance as yf\n",
     "import requests\n",
+    "import json\n",
     "from datetime import datetime\n",
     "from azure.storage.blob import BlobServiceClient\n",
     "from io import StringIO\n",
@@ -27,7 +20,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
+   "id": "5e323a1a-e829-4079-a277-d46603f865e7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(\"config.json\") as f:\n",
+    "    config = json.load(f)\n",
+    "\n",
+    "ALPHA_VANTAGE_API_KEY = config[\"ALPHA_VANTAGE_API_KEY\"]\n",
+    "AZURE_STORAGE_ACCOUNT = config[\"AZURE_STORAGE_ACCOUNT\"]\n",
+    "AZURE_CONTAINER = config[\"AZURE_CONTAINER\"]\n",
+    "AZURE_SAS_TOKEN = config[\"AZURE_SAS_TOKEN\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "id": "66548db3-54ed-440a-ada7-2905c6dcdefb",
    "metadata": {},
    "outputs": [
@@ -40,10 +49,6 @@
     }
    ],
    "source": [
-    "AZURE_STORAGE_ACCOUNT = \"cpaastask\"\n",
-    "AZURE_CONTAINER = \"analytics\"\n",
-    "AZURE_SAS_TOKEN = \"sv=2024-11-04&ss=bfqt&srt=sco&sp=rwdlacupyx&se=2025-10-15T04:51:35Z&st=2025-09-24T20:36:35Z&spr=https&sig=U13SlWdeg4PddtSHGC%2B7VjVMMDARjP49MBhqF6yNXw8%3D\"\n",
-    "\n",
     "account_url = f\"https://{AZURE_STORAGE_ACCOUNT}.blob.core.windows.net\"\n",
     "blob_service = BlobServiceClient(account_url=account_url, credential=AZURE_SAS_TOKEN)\n",
     "container = blob_service.get_container_client(AZURE_CONTAINER)\n",
@@ -61,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "id": "af6d6d81-615f-4817-8c98-6fc641712d62",
    "metadata": {
     "scrolled": true
@@ -11717,14 +11722,13 @@
       "                                        '2. high': '102.3000',\n",
       "                                        '3. low': '100.7700',\n",
       "                                        '4. close': '101.3200',\n",
-      "                                        '5. volume': '2261722'}}}\n"
+      "                                        '5. volume': '2261723'}}}\n"
      ]
     }
    ],
    "source": [
     "# RAW Alpha Vantage call\n",
     "\n",
-    "ALPHA_VANTAGE_API_KEY = \"ARZ8YPRK3FZXLBSL\"\n",
     "BASE_URL = \"https://www.alphavantage.co/query\"\n",
     "params = {\n",
     "    \"function\": \"TIME_SERIES_DAILY\",  \n",
@@ -11750,7 +11754,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 6,
    "id": "bd7c6daf-e65b-4e09-91d6-ee2d139b3b41",
    "metadata": {},
    "outputs": [],
@@ -11804,7 +11808,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 7,
    "id": "b34d43f2-1137-4728-aeee-0b8e8feae967",
    "metadata": {},
    "outputs": [
@@ -11911,7 +11915,7 @@
        "4 2020-01-08   108.80   110.82  108.20    109.39  3034975.0    TWLO"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -11923,7 +11927,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 8,
    "id": "0ee1c0c1-1e9b-4859-9f70-c1e295dc65a2",
    "metadata": {},
    "outputs": [
@@ -12030,7 +12034,7 @@
        "4 2020-01-08    67.82   69.290  67.290     67.74   191619.0    BAND"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -12042,7 +12046,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 10,
    "id": "8e402983-1f19-468a-95aa-87d883d1b381",
    "metadata": {},
    "outputs": [
@@ -12149,7 +12153,7 @@
        "4 2020-01-08    18.61    19.17   18.56     19.05   725545.0    EGHT"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -12177,7 +12181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 11,
    "id": "52e09ea2-3300-4c11-bf15-da278f0ae77f",
    "metadata": {},
    "outputs": [],
@@ -12187,7 +12191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 12,
    "id": "d6ab0f3c-daa2-4176-b688-df69bcf94f42",
    "metadata": {},
    "outputs": [
@@ -12285,7 +12289,7 @@
        "4 2020-01-08   108.80   110.82  108.20    109.39  3034975.0    TWLO"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -12296,7 +12300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 13,
    "id": "f9b4de37-cc7b-4287-814d-4d9328196bfa",
    "metadata": {},
    "outputs": [
@@ -12310,7 +12314,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -12329,7 +12333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 15,
    "id": "e74346c7-d9c7-4c7a-8d5d-77352765138d",
    "metadata": {},
    "outputs": [],
@@ -12342,12 +12346,15 @@
     "    \"5. volume\": \"volume\",\n",
     "}\n",
     "\n",
+    "twlo = twlo.rename(columns=rename_map)\n",
+    "eght = eght.rename(columns=rename_map)\n",
+    "band = band.rename(columns=rename_map)\n",
     "combined_df = combined_df.rename(columns=rename_map)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 16,
    "id": "52d8941d-6d07-473a-a5d8-2899cdf09b33",
    "metadata": {},
    "outputs": [
@@ -12445,7 +12452,7 @@
        "4 2020-01-08  108.80  110.82  108.20  109.39  3034975.0    TWLO"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -12480,7 +12487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 17,
    "id": "89468df4-dd24-4bdd-a09b-61b130d39146",
    "metadata": {},
    "outputs": [],
@@ -12506,7 +12513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 18,
    "id": "e32d7d3a-6a23-443d-b507-95da6e61e1a9",
    "metadata": {},
    "outputs": [
@@ -12516,14 +12523,16 @@
      "text": [
       "Uploaded DataFrame to blob: twlo_prices.csv\n",
       "Uploaded DataFrame to blob: eght_prices.csv\n",
-      "Uploaded DataFrame to blob: band_prices.csv\n"
+      "Uploaded DataFrame to blob: band_prices.csv\n",
+      "Uploaded DataFrame to blob: combined_prices.csv\n"
      ]
     }
    ],
    "source": [
     "upload_df_to_blob(twlo, \"twlo_prices.csv\")\n",
     "upload_df_to_blob(eght, \"eght_prices.csv\")\n",
-    "upload_df_to_blob(band, \"band_prices.csv\")"
+    "upload_df_to_blob(band, \"band_prices.csv\")\n",
+    "upload_df_to_blob(combined_df, \"combined_prices.csv\")\n"
    ]
   },
   {
